--- a/wp-content/themes/neamob-theme/scss/pages/_blog.scss
+++ b/wp-content/themes/neamob-theme/scss/pages/_blog.scss
@@ -148,8 +148,8 @@
   .blog-grid {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     margin-bottom: 80px;
+    gap: 0 19px;
   }
 
   .blog-card {
